# rs-web-template

./: .env  Cargo.toml  README.md  ask-dotenv.rhai  cargo-generate.toml
src/: errors.rs  main.rs
