[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

{% if include_optimization_flags%}[profile.release]
lto = true
opt-level = 's'
codegen-units = 1
debug = false
debug-assertions = false{% endif %}

[dependencies]
{% if use_cors %}actix-cors = "0.6"{% endif %}
actix-web = "4"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
{% if use_dotenv %}dotenv = "0.15"{% endif %}
{% if redis == "redis with connection pool (r2d2)" %}r2d2 = "0.8"
r2d2_redis = "0.14"{% endif %}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "chrono", "macros"]}
tracing = "0.1"
tracing-subscriber = "0.3"